# cmd/api/errors.go
@@ -23,3 +23,15 @@ func (app *application) conflictError(w http.ResponseWriter, r *http.Request) {
 	app.logger.Errorf("conflict", "method", r.Method, "path", r.URL.Path)
 	writeJSONError(w, http.StatusConflict, "conflict")
 }
+
+func (app *application) unauthorizedError(w http.ResponseWriter, r *http.Request, err error) {
+	app.logger.Errorf("unauthorized", "method", r.Method, "path", r.URL.Path, "error", err.Error())
+	writeJSONError(w, http.StatusUnauthorized, "unauthorized")
+}
+
+func (app *application) unauthorizedBasicError(w http.ResponseWriter, r *http.Request, err error) {
+	app.logger.Errorf("unauthorized basic error", "method", r.Method, "path", r.URL.Path, "error", err.Error())
+	// Set the WWW-Authenticate header to prompt the user for basic auth credentials
+	w.Header().Set("WWW-Authenticate", `Basic realm="restricted", charset="UTF-8"`)
+	writeJSONError(w, http.StatusUnauthorized, "unauthorized")
+}
