# cmd/api/health.go
@@ -11,6 +11,8 @@ import (
 //	@Tags			ops
 //	@Produce		json
 //	@Success		200	{object}	string	"ok"
+//	@Failure		500	{object}	error
+//	@Security		ApiKeyAuth
 //	@Router			/health [get]
 func (app *application) healthcheckHandler(w http.ResponseWriter, r *http.Request) {
 	data := map[string]string{
