# cmd/api/main.go
@@ -51,6 +51,12 @@ func main() {
 				apiKey: env.GetString("MAILTRAP_API_KEY", ""),
 			},
 		},
+		auth: authConfig{
+			basic: basicAuthConfig{
+				user:     env.GetString("BASIC_AUTH_USER", "admin"),
+				password: env.GetString("BASIC_AUTH_PASSWORD", "password"),
+			},
+		},
 	}
 
 	//Logger
